refactor: remove language features above Java 17 for compatibility
- Replace switch expressions with switch statements.
- Remove collections methods `getFirst()`, `getLast()`, `addFirst()`, and `reversed()`.

Signed-off-by: u228298 <merlin.unterfinger@sbb.ch>